fixed spacing in index.html

--- a/app/assets/stylesheets/restaurants.scss
+++ b/app/assets/stylesheets/restaurants.scss
@@ -1,5 +1,6 @@
 body {
   margin: 0px;
+  min-height: 500px
 }
 
 #sidebar {
@@ -28,12 +29,15 @@ body {
 }
 
 #loading {
-  margin-top: 80px;
-  margin-bottom: 40px;
-  height:80px;
   width:100%;
   text-align: center;
   display: none;
+}
+
+#spacer {
+  width: 100%;
+  height: 200px;
+  margin-top: 100px;
 }
 
 #error-message h3 {
@@ -91,14 +95,10 @@ body {
 
 #search {
   display: inline-block;
-  height:80px;
-  margin-top: 80px;
-  margin-bottom: 40px;
 }
 
 #front-logos {
   width: 100%;
-  top: 500px;
 }
 
 #scroll-links h6 {
